Fix spacing of heading + heading

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -135,6 +135,11 @@ h3, h4, h5, h6 {
   font-size: 1em;
 }
 
+h1 + h2, h2 + h3, h3 + h4, h4 + h5, h5 + h6,
+h6 + h5, h5 + h4, h4 + h3, h3 + h2, h2 + h1 {
+  margin-top: .75rem;
+}
+
 h1, h2, h3, h4, h5, h6 {
   margin: .5rem 0 -.5rem;
   font-weight: 600;
